<?xml version="1.0"?>
<package>
  <name>cisst_conversions</name>
  <version>0.0.0</version>
  <description>The cisst_conversions package</description>

  <maintainer email="zihan.chen@jhu.edu">zihan</maintainer>
  <license>BSD</license>
  <author email="zihan.chen@jhu.edu">Zihan Chen</author>

  <!-- build depend -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <!-- run depend -->
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
