<?xml version="1.0"?>
<package>
  <name>cisst_msgs</name>
  <version>0.0.1</version>
  <description>The cisst_msgs package</description>

  <maintainer email="zihan@jhu.edu">Zihan Chen</maintainer>
  <license>CISST</license>

  <author email="zihan.chen@jhu.edu">Zihan Chen</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>